# STM32_Static_Lib

./: .gitignore  CMakeLists.txt  README.md  arm-none-eabi-gcc.cmake
STM32_F3/: CMakeLists.txt
STM32_F3/CMSIS/: CMakeLists.txt
STM32_F3/DSP/: CMakeLists.txt  DSPSources.cmake
STM32_F3/HAL/: CMakeLists.txt  HALSources.cmake
