cmake_minimum_required(VERSION 3.2)
project(STM32_F3_HAL)
include(HALSources.cmake)
add_library(${PROJECT_NAME} STATIC ${stm32f3xx_hal_sources})
target_link_libraries(${PROJECT_NAME} STM32_F3_CMSIS)
target_include_directories(${PROJECT_NAME} PUBLIC 
	${CMAKE_CURRENT_SOURCE_DIR}/inc 
	${CMAKE_CURRENT_SOURCE_DIR}/inc/Legacy
	${PROJECT_BINARY_DIR}/inc 
)

option(HAL_MODULE_ENABLED "Enable HAL module" ON)
option(HAL_ADC_MODULE_ENABLED "Enable ADC module" ON)
option(HAL_CAN_MODULE_ENABLED "Enable CAN module" ON)
option(HAL_CRC_MODULE_ENABLED "Enable CRC module" ON)
option(HAL_CEC_MODULE_ENABLED "Enable CEC module" ON)
option(HAL_COMP_MODULE_ENABLED "Enable COMP module" ON)
option(HAL_CRYP_MODULE_ENABLED "Enable CRYP module" ON)
option(HAL_DAC_MODULE_ENABLED "Enable DAC module" ON)
option(HAL_DMA_MODULE_ENABLED "Enable DMA module" ON)
option(HAL_FLASH_MODULE_ENABLED "Enable FLASH module" ON)
option(HAL_EXTI_MODULE_ENABLED "Enable EXTI module" ON)
option(HAL_HRTIM_MODULE_ENABLED "Enable HRTIM module" ON)
option(HAL_LCD_MODULE_ENABLED "Enable LCD module" ON)
option(HAL_LPTIM_MODULE_ENABLED "Enable LPTIM module" ON)
option(HAL_NAND_MODULE_ENABLED "Enable NAND module" ON)
option(HAL_NOR_MODULE_ENABLED "Enable NOR module" ON)
option(HAL_PCCARD_MODULE_ENABLED "Enable PCCARD module" ON)
option(HAL_SRAM_MODULE_ENABLED "Enable SRAM module" ON)
option(HAL_HASH_MODULE_ENABLED "Enable HASH module" ON)
option(HAL_GPIO_MODULE_ENABLED "Enable GPIO module" ON)
option(HAL_I2C_MODULE_ENABLED "Enable I2C module" ON)
option(HAL_I2S_MODULE_ENABLED "Enable I2S module" ON)
option(HAL_IWDG_MODULE_ENABLED "Enable IWDG module" ON)
option(HAL_OPAMP_MODULE_ENABLED "Enable OPAMP module" ON)
option(HAL_PWR_MODULE_ENABLED "Enable PWR module" ON)
option(HAL_RCC_MODULE_ENABLED "Enable RCC module" ON)
option(HAL_RNG_MODULE_ENABLED "Enable RNG module" ON)
option(HAL_RTC_MODULE_ENABLED "Enable RTC module" ON)
option(HAL_SDADC_MODULE_ENABLED "Enable SDADC module" ON)
option(HAL_SMBUS_MODULE_ENABLED "Enable SMBUS module" ON)
option(HAL_SPI_MODULE_ENABLED "Enable SPI module" ON)
option(HAL_TIM_MODULE_ENABLED "Enable TIM module" ON)
option(HAL_TSC_MODULE_ENABLED "Enable RSC module" ON)
option(HAL_UART_MODULE_ENABLED "Enable UART module" ON)
option(HAL_USART_MODULE_ENABLED "Enable USART module" ON)
option(HAL_IRDA_MODULE_ENABLED "Enable IRDA module" ON)
option(HAL_SMARTCARD_MODULE_ENABLED "Enable SMARTCARD module" ON)
option(HAL_WWDG_MODULE_ENABLED "Enable WWDG module" ON)
option(HAL_CORTEX_MODULE_ENABLED "Enable CORTEX module" ON)
option(HAL_PCD_MODULE_ENABLED "Enable PCD module" ON)
configure_file(${PROJECT_SOURCE_DIR}/inc/stm32f3xx_hal_conf_template.h ${PROJECT_SOURCE_DIR}/inc/stm32f3xx_hal_conf.h)
